-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.0 Beta2
-
None
The attached HTML file crashes QTextDocument::setHtml (QList<T>::at: "index out of range").
442│ void ValueExtractor::lengthValues(const Declaration &decl, int *m) 443│ { 444│ if (decl.d->parsed.isValid()) { 445│ QList<QVariant> v = decl.d->parsed.toList(); 446│ for (int i = 0; i < 4; i++) 447├───────────> m[i] = lengthValueFromData(qvariant_cast<LengthData>(v.at(i)), f); 448│ return; 449│ } 450│ (gdb) p v $1 = QList<QVariant> (size = 0)
| For Gerrit Dashboard: QTBUG-80496 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 283522,4 | Fix assert in QTextDocument CSS parser on "border-width: 1pt" | 5.14 | qt/qtbase | Status: MERGED | +2 | 0 |
| 284123,1 | Fix assert in QTextDocument CSS parser on "border-width: 1pt" | 5.14.0 | qt/qtbase | Status: ABANDONED | 0 | 0 |